# dubs

./: .gitignore  PLAN.md  README.md  TODO.md
.github/workflows/: publish.yml
data/: patterns.json  schema.json
data/themes/: eveonline.json  fallout.json  gundam.json  leet.json  nato.json  pokemon.json  star-trek.json  star-wars.json  transformers.json  warhammer-40k.json
python/: pyproject.toml
python/src/dubs/: __init__.py  generator.py
python/tests/: test_dubs.py
ruby/: Gemfile  dubs-0.1.0.gem  dubs-0.1.1.gem  dubs.gemspec
ruby/lib/: dubs.rb
ruby/lib/dubs/: data.rb  generator.rb  pattern.rb  theme.rb  token.rb  version.rb
ruby/spec/: dubs_spec.rb  spec_helper.rb
rust/: Cargo.toml
rust/src/: data.rs  generator.rs  lib.rs  main.rs  pattern.rs  theme.rs  token.rs
rust/tests/: integration.rs
typescript/: package-lock.json  package.json
typescript/data/data/: adjectives.json  schema.json
typescript/data/data/themes/: nato.json  pokemon.json  star-wars.json  transformers.json  warhammer-40k.json
typescript/src/: index.ts
typescript/test/: dubs.test.ts
