[package]
name = "dubs"
version = "0.1.5"
edition = "2024"
authors = ["Adam Ladachowski <adam@saiden.pl>"]
description = "Themed name generator — like haikunator, but with categories"
license = "MIT"
repository = "https://github.com/saiden-dev/dubs"
keywords = ["name", "generator", "haikunator", "random", "themed"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
